testdata/invalid/bare_expression.pr
// Top-level expression is not valid.
42;
